index.css
/* ---- CSS Variables ---- */
:root{
    --pastel-green: #988686; 
    --pastel-brown: #5C4E4E; 
}

/*---- Container Styling ----*/

*{ 
    background-color: #D1D0D0; 
    color: var(--pastel-brown); 
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
body{ 
    display: flex; 
    justify-content: center;
    align-content: center;
}
.container{ 
    padding: 2em; 
    width: 1000px; 
}

/*---- Header styling ----*/
header{
    margin-top: 2rem; 
    margin-bottom: 2rem; 
}

header>h1{ 
    font-size: 4rem; /* 12 * 4 = 48 px */
    color: var(--pastel-brown); 
    text-align: center; 
    margin-bottom: 40px; 
}

header>div{
    display: flex; 
    flex-direction: column; 
    justify-content: center;
    align-items: center;
}
#header-input{ 
    display: flex; 
    justify-content: center; 
    gap: 3rem; 
    margin-bottom: 2rem; 
}
img{ 
    margin: 0 auto; 
}

/*----Input Styling ----*/
input{
        color: var(--pastel-green);
        font-size: 3rem; 
        font-weight: bolder; 
        background-color: transparent; 
        text-align: center;
       
    } 
input[type=number]::placeholder{
    color: var(--pastel-green); 
    font-weight: bold; 
}
input[type=number]::-webkit-inner-spin-button, ::-webkit-outer-spin-button{
    opacity: 0; 
    margin: 0; 
    display: none; 
}
input[type=number]:focus{
    color: var(--pastel-green)
}
input[type=text]{
    color: var(--pastel-brown); 
    font-size: 2.5rem; 
    text-align: left; 
    margin-bottom: 1rem; 
}
#increment, #decrement{
    cursor: pointer; 
    padding-left: 2rem; 
    padding-right: 2rem;   
    color: var(--pastel-brown); 
    font-size: 2rem
}
#increment:hover, #decrement:hover{
    background-color: var(--pastel-brown);
    color: white; 
}
#start-timer{
    padding: 1.25rem; 
    width: 75%; 
    cursor: pointer;
    font-weight: bolder;
    font-size: 2rem; 
}
#start-timer:hover{
    background-color: var(--pastel-brown); 
    color: white; 
}
#timer-display{ 
    font-size: 2rem; 
    font-weight: bolder; 
    color: var(--pastel-blue); 
    text-align: center; 
}

.quickset>button:hover{ 
    cursor: pointer;
    color: white; 
    background-color: var(--pastel-brown); 
}
.directions{ 
    color: white; 
    h2{ 
        font-size: 2rem; 
    }
    li{ 
        font-size: 1.25rem; 
    }
    p{ 
        margin: 40px; 
    }
}
/*---- Button Styling ----*/
.quickset{ 
    display: flex; 
    flex-direction: column;
    gap: 1rem; 

    font-size: 1.25rem; 
    font-weight: bold; 
}
.buttons{ 
    width: 80%;
    margin-top: 1em; 
    justify-self: center; 

    display: flex; 
    justify-content: space-evenly;
}

.buttons>button{
    background-color: transparent;
    width: 20%; 
    padding: 1em; 
    font-weight: bolder; 
    cursor: pointer; 
}


#delete-activity, #edit-activity{
    border-color: var(--pastel-green); 
    appearance: none;
    border: 4px var(--pastel-green) solid; 
    margin-bottom: 1rem; 
    color: black; 
    width: 100%; 
    padding: 1rem; 
    margin: 10px; 
    gap: 1rem; 

}
#add-activity, #save-activity{ 
    border-color: var(--pastel-green); 
    color: var(--pastel-green); 
}

#add-activity:hover, 
#save-activity:hover, 
#delete-activity:hover, 
#edit-activity:hover{
    background-color: var(--pastel-green); 
    color: black; 
    transform: translate(5%); 
    font-weight: bold; 
}

/*--- Activity ----*/
#activities{ 
    margin-top: 2rem; 
    list-style: none; 
}
#activities>li{ 
    font-size: 1.5rem;
}


#activities>li>.card{ 
    display: grid; 
    grid-template-columns: 1.5rem 1fr auto;   
    align-items: center;
    gap: 1rem; 
    background-color: var(--pastel-brown);
    padding: 2.25rem; 
    border-radius: 20px;
    margin-top: 2rem; 
}

.edit-delete{ 
    background-color: transparent; 
}
.card>label{ 
    color: white; 
    font-size: 2.25rem; 
    background-color: transparent; 
}

div>input:checked + label{
    text-decoration: line-through; 
}
input[type=checkbox]{ 
    display: grid; 
    place-content: center;
    margin: 0; 
    cursor: pointer; 
    --webkit-appearance: none; 
    appearance: none; 
    border: 3px solid white; 
    width: 1.5rem; 
    height: 1.5rem;
    padding: 0.5rem;  
}
input[type=checkbox]::before{
    content: ""; 
    transform: scale(0);
}

input[type=checkbox]:checked::before{
    transform: scale(1); 
    width: 0.5rem; 
    height: 0.5rem; 
    box-shadow: inset 1rem 1rem white; 
}

